--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,6 @@ show-source = True
 # Set the line max length to Black's default
 max-line-length = 88
 
-per-file-ignores = 
-    __init__.py:F401
-    poc_string.py:E203
+ignore = E203
+
+per-file-ignores = __init__.py:F401
