--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-# Ignore tested algorithm
-algo_provider/algo.json
-
 # Build and packaging
 *.egg-info/
-algo_provider/__pycache__/
+
+# Ignore all __pycache__ directories
+__pycache__/    
+
+# Virtual environment
+venv/
