--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,2 @@
-Flask == 2.0.3
-flask_cors == 3.0.8
-connexion == 2.6.0
-requests == 2.25.1
-swagger-ui-bundle == 0.0.5
-openapi_spec_validator == 0.2.8
-jsonschema==3.2.0
-Werkzeug==2.2.2
+fastapi==0.115.4
+uvicorn==0.32.0
