--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,6 @@ show-source = True
 # Set the line max length to Black's default
 max-line-length = 88
 
-ignore = E203
+ignore = E203, W503
 
 per-file-ignores = __init__.py:F401
