--- a/.github/workflows/pull-request-check.yml
+++ b/.github/workflows/pull-request-check.yml
@@ -49,3 +49,56 @@ jobs:
           node-version: 18
       - name: Install dependencies and check prettier format
         run: npm install -g cspell && cspell --no-summary --no-progress --no-color .
+
+  version-upgrade-check: # Check that the version is greater than the previous commit version
+    name: Version upgrade check
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Get the branch version
+        id: version-check
+        run: |
+          cd algo_provider
+          VERSION=$(cat app.py | grep -m1 APP_VERSION | cut -d '=' -f 2 | sed 's/ //g'| tr -d '"')
+          echo "BRANCH_VERSION=$VERSION" >> $GITHUB_OUTPUT
+
+      - uses: actions/checkout@v3
+        with:
+          ref: main
+
+      - name: Check that the version is greater than the previous commit version
+        run: |
+          BRANCH_VERSION=${{ steps.version-check.outputs.BRANCH_VERSION }}
+          cd algo_provider
+          PREVIOUS_VERSION=$(cat app.py | grep -m1 APP_VERSION | cut -d '=' -f 2 | sed 's/ //g'| tr -d '"')
+
+          echo "PREVIOUS_VERSION=$PREVIOUS_VERSION"
+          echo "BRANCH_VERSION=$BRANCH_VERSION"
+
+          # If pervious version is beta, ignore test
+          if [[ $PREVIOUS_VERSION == *"beta"* ]]; then
+            echo "Beta version detected, skipping version upgrade check."
+            exit 0
+          fi
+
+          if [ "$BRANCH_VERSION" == "" ]; then
+            echo "No version found in current branch."
+            exit 1
+          fi
+
+          if [ "$PREVIOUS_VERSION" == "" ]; then
+            echo "No version found in main branch."
+            exit 1
+          fi
+
+          if [[ $PREVIOUS_VERSION == $BRANCH_VERSION ]]; then
+            echo "Version not upgraded: frontend/package.json version '$PREVIOUS_VERSION' == branch version '$BRANCH_VERSION'."
+            exit 1
+          fi
+
+          if [[ $PREVIOUS_VERSION > $BRANCH_VERSION ]]; then
+            echo "Version not upgraded: frontend/package.json version '$PREVIOUS_VERSION' > branch version '$BRANCH_VERSION'."
+            exit 1
+          fi
+
+          echo "Version upgraded: frontend/package.json version '$PREVIOUS_VERSION' < branch version '$BRANCH_VERSION'."
